--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -6,8 +6,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <activity
             android:name="com.arjundass.flappybird.AndroidLauncher"
